syntax = "proto3";

option go_package = "../wsmsg";
option java_package = "com.hao.heji.proto";

package com.heji.proto;

//消息类型
enum Type {
    ACK_OK = 0;
    ACK_ERR = 1;
    ADD_BILL = 2;
    DELETE_BILL = 3;
    UPDATE_BILL = 4;
}
//消息体
message Packet {
    string id = 1;
    Type type = 2;
    int64 timestamp = 3;
    string fromId = 4;
    repeated string toId = 5;
    string content = 6;
}
